# jlang

./: .gitignore  CMakeLists.txt  astnode.hpp  c.cpp  c.hpp  grammar  interpreter.cpp  interpreter.hpp  ir  lang.tab.cc  lang.yy  loc.hpp  main.cpp  makefile  parser.cpp  parser.hpp  tokeniser.cpp  tokeniser.hpp  type.cpp  type.hpp
include/: CFG.hpp  astnode.hpp  interpreter.hpp  log.hpp  parser.hpp  runtime.hpp  tokeniser.hpp  type.hpp  typet.hpp  typeval.hpp
progs/: 1.jl  2.jl  file.jlm  full1.jl  mstring.jlm  ns1.jl  sb.jl  sb.jlm
runtime/: c.cpp
src/: CFG.cpp  interpreter.cpp  log.cpp  main.cpp  parser.cpp  tokeniser.cpp  type.cpp  typeval.cpp
